metadata/sf-prod/force-app/main/default/objects/QC_Rule_Result__c/QC_Rule_Result__c.object-meta.xml
<CustomObject>
    <label>QC Rule Result</label>
    <nameField>
        <label>QC Rule Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QC Rule Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>