metadata/sf-prod/force-app/main/default/objects/QC_Rule_Result__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the QC Rule</description>
    <formula>QC_Rule__r.Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Category of the QC Rule</inlineHelpText>
    <label>Category</label>
    <type>Text</type>
</CustomField>