metadata/sf-prod/force-app/main/default/objects/QC_Rule_Result__c/fields/Grader_Comment__c.field-meta.xml
<CustomField>
    <fullName>Grader_Comment__c</fullName>
    <label>Grader Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>