metadata/sf-prod/force-app/main/default/objects/QC_Rule_Result__c/fields/Lower_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Lower_Threshold__c</fullName>
    <label>Lower Threshold</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>