metadata/sf-prod/force-app/main/default/objects/QC_Rule_Result__c/fields/Metric_Value__c.field-meta.xml
<CustomField>
    <fullName>Metric_Value__c</fullName>
    <label>Metric Value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>