metadata/sf-prod/force-app/main/default/objects/QC_Rule_Result__c/fields/QC_Rule__c.field-meta.xml
<CustomField>
    <fullName>QC_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>QC Rule</label>
    <referenceTo>QC_Rule__c</referenceTo>
    <relationshipLabel>QC Rule Results</relationshipLabel>
    <relationshipName>QC_Rule_Results</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>