metadata/sf-prod/force-app/main/default/objects/QC_Rule_Result__c/fields/QC_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>QC_Scorecard__c</fullName>
    <label>QC Scorecard</label>
    <referenceTo>QC_Scorecard__c</referenceTo>
    <relationshipLabel>QC Rule Results</relationshipLabel>
    <relationshipName>QC_Rule_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>