metadata/sf-prod/force-app/main/default/objects/QC_Rule_Result__c/fields/Result_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Result_DateTime__c</fullName>
    <label>Result DateTime</label>
    <type>DateTime</type>
</CustomField>