metadata/sf-prod/force-app/main/default/objects/QC_Rule_Result__c/fields/Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Time_Stamp__c</fullName>
    <inlineHelpText>Timestamp in the call recording (optional)</inlineHelpText>
    <label>Time Stamp</label>
    <length>80</length>
    <type>Text</type>
</CustomField>