metadata/sf-prod/force-app/main/default/objects/QC_Rule_Result__c/fields/VP_Grader_Comment__c.field-meta.xml
<CustomField>
    <fullName>VP_Grader_Comment__c</fullName>
    <description>VP comment about the quality of auto-grader</description>
    <inlineHelpText>VP comment about the quality of the auto-grader, if incorrect then what the result should be and why</inlineHelpText>
    <label>VP Grader Comment</label>
    <type>TextArea</type>
</CustomField>