metadata/sf-prod/force-app/main/default/objects/QC_Rule_Result__c/fields/VP_Result__c.field-meta.xml
<CustomField>
    <fullName>VP_Result__c</fullName>
    <description>Used by the VP to validate auto-grader result</description>
    <inlineHelpText>Used by the VP to validate auto-grader result</inlineHelpText>
    <label>VP Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QC_Result</valueSetName>
    </valueSet>
</CustomField>