metadata/sf-prod/force-app/main/default/objects/QC_Rule_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>QC_Scorecard__c</columns>
    <columns>NAME</columns>
    <columns>Result_DateTime__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Result__c</columns>
    <columns>Grader_Comment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Result_DateTime__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>